# combine-fixing

./: .gitignore  IMPLEMENTATION_PLAN.md  OPTIMAL_TYPO_CHECKING.md  TODO.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  test  test_spellbook.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  merge.rs  mod.rs  spellcheck.rs
src-tauri/src/engine/: checker.rs  dictionary.rs  docx_parser.rs  merger.rs  mod.rs
src/components/layout/: sidebar.tsx  topbar.tsx
src/lib/: providers.ts  types.ts
src/pages/: home.tsx  merge.tsx  settings.tsx  spellcheck.tsx
src/stores/: app-store.ts  spellcheck-store.ts
